add: react session

--- a/react-session-5.mdx
+++ b/react-session-5.mdx
@@ -330,8 +330,8 @@ function BlogPost(props) {
 
 <FixedContainer>
   We can write a function that creates components like{" "}
-  <strong>CommentList</strong> and <strong>BlogPost</strong>
-  , that subscribe to DataSource
+  <strong>CommentList</strong> and <strong>BlogPost</strong>,
+  that subscribe to DataSource
 </FixedContainer>
 
 ---
@@ -858,5 +858,3 @@ function logProps(Component) {
 ---
 
 ## That's it for today, thanks! 🙏🏽
-
-##### Let us try to persist these learnings to a permanent 'state' 😄
